<resources>
    <string name="app_name">Football Match Schedule</string>

    <string name="nav_match">Matches</string>
    <string name="nav_team">Teams</string>
    <string name="nav_fav">Favorites</string>

    <string name="tab_past">Past</string>
    <string name="tab_next">Next</string>
    <string name="tab_oview">Overview</string>
    <string name="tab_player">Players</string>
    <string name="tab_match">Matches</string>
    <string name="tab_team">Teams</string>

    <string name="past">Prev Match</string>
    <string name="next">Next Match</string>
    <string name="fav">Favorites</string>

    <string name="badge">Badge Logo</string>
    <string name="score">vs</string>
    <string name="goal">Goals</string>
    <string name="shot">Shots</string>
    <string name="lineup">Lineups</string>
    <string name="keeper">Goal Keeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="substitute">Substitutes</string>

    <string name="player_weight_title">Weight(kg)</string>
    <string name="player_height_title">Height(m)</string>

    <string name="toast_fav_added">Added to favorite</string>
    <string name="toast_fav_remove">Removed from favorite</string>
</resources>
